--- a/app/views/calls/index.html.erb
+++ b/app/views/calls/index.html.erb
@@ -14,8 +14,10 @@
 
 <% @calls.each do |call| %>
   <tr>
-    <td><%= call.created_at %></td>
-    <td><%= call.number %></td>
+    <% t = call.created_at %>
+    <% ft = "#{t.min}:#{t.sec}" %>
+    <td><%= ft %></td>
+    <td><%= call.number[-4..-1] %></td>
     <td><%= call.vote %></td>
 <!--
     <td><%= link_to 'Show', call %></td>
