--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,11 @@
   <% if @refresh %>
     <meta http-equiv="refresh" content="2"/>
   <% end %>
+  
+  <style type="text/css">
+    .right {text-align:right;}
+  </style>
+  
   <title>SoYouThinkYouCanSpeak</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
