--- a/app/views/calls/index.html.erb
+++ b/app/views/calls/index.html.erb
@@ -5,6 +5,7 @@
 <%= link_to 'New Call', new_call_path %>
 <br />
 <br />
+<canvas id="mycanvas" width="400" height="100"></canvas>
 <table>
   <tr>
     <th>Vote</th>
