--- a/app/views/calls/index.html.erb
+++ b/app/views/calls/index.html.erb
@@ -1,33 +1,9 @@
-<h1>Listing calls</h1>
+<h1>Realtime Speaker Rating</h1>
 
-<span>Current Vote: </span><b><%= @total %></b>
+<span>Current Vote: </span><b id="value"><%= @total %></b>
 <br />
+<canvas id="plotter" height="200" width="400"></canvas>
+<div id="nocanvas"></div>
 <%= link_to 'New Call', new_call_path %>
-<br />
-<br />
-<canvas id="mycanvas" width="400" height="100"></canvas>
-<table>
-  <tr>
-    <th>Vote</th>
-    <th>Number</th>
-    <th>Time</th>
-  </tr>
 
-<% @calls.each do |call| %>
-  <tr>
-    <% t = call.created_at %>
-    <% ft = sprintf("%02d:%02d", t.min, t.sec) %>
-    <td class="right"><%= call.vote %></td>
-    <td><%= call.number[-4..-1] %></td>
-    <td><%= ft %></td>
-<!--
-    <td><%= link_to 'Show', call %></td>
-    <td><%= link_to 'Edit', edit_call_path(call) %></td>
-    <td><%= link_to 'Destroy', call, :confirm => 'Are you sure?', :method => :delete %></td>
--->
-  </tr>
-<% end %>
-</table>
-
-<br />
 
